--- a/test/ty.html
+++ b/test/ty.html
@@ -1,94 +1,188 @@
-import { useEffect, useState } from "react";
-import PortalHeader from "@/components/PortalHeader";
-import SearchBar from "@/components/SearchBar";
-import NewsletterGrid from "@/components/NewsletterGrid";
-import { fetchNewsletterData, NewsletterRow } from "@/data/newsletterData";
-import { FileText, Calendar } from "lucide-react";
+import { useState, useMemo, useRef, useEffect } from "react";
+import {
+  Box,
+  Input,
+  IconButton,
+  VStack,
+  HStack,
+  Text,
+} from "@chakra-ui/react";
+import { Search, X } from "lucide-react";
+import { NewsletterRow } from "@/data/newsletterData";
 
-const Index = () => {
-  const [searchTerm, setSearchTerm] = useState("");
-  const [newsletterData, setNewsletterData] = useState<NewsletterRow[]>([]);
-  const [loading, setLoading] = useState(true);
-  const [lastUpdated, setLastUpdated] = useState<string>("");
+interface SearchBarProps {
+  data: NewsletterRow[];
+  searchTerm: string;
+  onSearchChange: (term: string) => void;
+}
+
+const SearchBar = ({ data, searchTerm, onSearchChange }: SearchBarProps) => {
+  const [showSuggestions, setShowSuggestions] = useState(false);
+  const [focusedIndex, setFocusedIndex] = useState(-1);
+
+  const inputRef = useRef<HTMLInputElement>(null);
+  const suggestionsRef = useRef<HTMLDivElement>(null);
+
+  const suggestions = useMemo(() => {
+    if (!searchTerm || searchTerm.length < 2) return [];
+
+    const term = searchTerm.toLowerCase();
+    const matches = new Set<string>();
+
+    data.forEach((row) => {
+      if (row.section.toLowerCase().includes(term)) matches.add(row.section);
+      if (row.strategy.toLowerCase().includes(term)) matches.add(row.strategy);
+      if (row.personFirm.toLowerCase().includes(term))
+        matches.add(row.personFirm);
+      if (row.location.toLowerCase().includes(term))
+        matches.add(row.location);
+      if (row.information.toLowerCase().includes(term)) {
+        row.information.split(" ").forEach((word) => {
+          if (word.toLowerCase().includes(term)) matches.add(word);
+        });
+      }
+    });
+
+    return Array.from(matches).slice(0, 8);
+  }, [data, searchTerm]);
 
   useEffect(() => {
-    fetchNewsletterData()
-      .then((data) => {
-        setNewsletterData(data);
+    const handleClickOutside = (event: MouseEvent) => {
+      if (
+        suggestionsRef.current &&
+        !suggestionsRef.current.contains(event.target as Node) &&
+        inputRef.current &&
+        !inputRef.current.contains(event.target as Node)
+      ) {
+        setShowSuggestions(false);
+      }
+    };
 
-        // Optional: compute last updated from latest date
-        if (data.length > 0) {
-          const latest = data
-            .map((d) => new Date(d.date))
-            .sort((a, b) => b.getTime() - a.getTime())[0];
-
-          setLastUpdated(latest.toLocaleDateString("en-GB", {
-            day: "2-digit",
-            month: "short",
-            year: "numeric",
-          }));
-        }
-      })
-      .finally(() => setLoading(false));
+    document.addEventListener("mousedown", handleClickOutside);
+    return () => document.removeEventListener("mousedown", handleClickOutside);
   }, []);
 
+  const handleKeyDown = (e: React.KeyboardEvent) => {
+    if (e.key === "ArrowDown") {
+      e.preventDefault();
+      setFocusedIndex((prev) => Math.min(prev + 1, suggestions.length - 1));
+    } else if (e.key === "ArrowUp") {
+      e.preventDefault();
+      setFocusedIndex((prev) => Math.max(prev - 1, -1));
+    } else if (e.key === "Enter" && focusedIndex >= 0) {
+      e.preventDefault();
+      onSearchChange(suggestions[focusedIndex]);
+      setShowSuggestions(false);
+      setFocusedIndex(-1);
+    } else if (e.key === "Escape") {
+      setShowSuggestions(false);
+      setFocusedIndex(-1);
+    }
+  };
+
+  const clearSearch = () => {
+    onSearchChange("");
+    inputRef.current?.focus();
+  };
+
   return (
-    <div className="min-h-screen bg-background">
-      <PortalHeader />
+    <Box position="relative" w="full" maxW="md">
+      {/* Input */}
+      <Box position="relative">
+        <Box
+          position="absolute"
+          left={3}
+          top="50%"
+          transform="translateY(-50%)"
+          color="fg.muted"
+        >
+          <Search size={16} />
+        </Box>
 
-      <main className="max-w-[1800px] mx-auto px-6 py-6">
-        {/* Stats Bar */}
-        <div className="flex items-center justify-between mb-6">
-          <div className="flex items-center gap-6">
-            <div className="flex items-center gap-2 text-sm text-muted-foreground">
-              <FileText className="h-4 w-4" />
-              <span>
-                <strong className="text-foreground">
-                  {loading ? "—" : newsletterData.length}
-                </strong>{" "}
-                Total Records
-              </span>
-            </div>
-
-            <div className="flex items-center gap-2 text-sm text-muted-foreground">
-              <Calendar className="h-4 w-4" />
-              <span>
-                Last Updated:{" "}
-                <strong className="text-foreground">
-                  {lastUpdated || "—"}
-                </strong>
-              </span>
-            </div>
-          </div>
-
-          <SearchBar
-            data={newsletterData}
-            searchTerm={searchTerm}
-            onSearchChange={setSearchTerm}
-          />
-        </div>
-
-        {/* Instructions */}
-        <div className="mb-4 flex items-center gap-4 text-xs text-muted-foreground bg-muted/50 px-4 py-2.5 rounded-lg">
-          <span className="flex items-center gap-1.5">
-            <span className="font-medium text-foreground">Tip:</span>
-            Double-click on Person/Firm, Location, or Information cells to edit
-          </span>
-          <span className="text-border">|</span>
-          <span>Press Enter to save changes</span>
-          <span className="text-border">|</span>
-          <span>Click PDF links to download</span>
-        </div>
-
-        {/* Grid */}
-        <NewsletterGrid
-          data={newsletterData}
-          searchTerm={searchTerm}
-          loading={loading}
+        <Input
+          ref={inputRef}
+          value={searchTerm}
+          placeholder="Search newsletters..."
+          pl={10}
+          pr={10}
+          py={2.5}
+          fontSize="sm"
+          bg="bg.card"
+          borderColor="border.default"
+          borderRadius="lg"
+          _placeholder={{ color: "fg.muted" }}
+          _focus={{
+            ring: 2,
+            ringColor: "primary.default",
+            borderColor: "transparent",
+          }}
+          onChange={(e) => {
+            onSearchChange(e.target.value);
+            setShowSuggestions(true);
+            setFocusedIndex(-1);
+          }}
+          onFocus={() => setShowSuggestions(true)}
+          onKeyDown={handleKeyDown}
         />
-      </main>
-    </div>
+
+        {searchTerm && (
+          <IconButton
+            aria-label="Clear search"
+            size="xs"
+            variant="ghost"
+            position="absolute"
+            right={2}
+            top="50%"
+            transform="translateY(-50%)"
+            onClick={clearSearch}
+          >
+            <X size={16} />
+          </IconButton>
+        )}
+      </Box>
+
+      {/* Suggestions */}
+      {showSuggestions && suggestions.length > 0 && (
+        <Box
+          ref={suggestionsRef}
+          position="absolute"
+          top="full"
+          left={0}
+          right={0}
+          mt={1}
+          bg="bg.popover"
+          border="1px solid"
+          borderColor="border.default"
+          borderRadius="lg"
+          shadow="lg"
+          zIndex={50}
+          overflow="hidden"
+        >
+          <VStack spacing={0} align="stretch">
+            {suggestions.map((suggestion, index) => (
+              <HStack
+                key={suggestion}
+                px={4}
+                py={2.5}
+                spacing={2}
+                cursor="pointer"
+                bg={index === focusedIndex ? "bg.muted" : "transparent"}
+                _hover={{ bg: "bg.muted" }}
+                onClick={() => {
+                  onSearchChange(suggestion);
+                  setShowSuggestions(false);
+                  setFocusedIndex(-1);
+                }}
+              >
+                <Search size={14} color="var(--chakra-colors-fg-muted)" />
+                <Text fontSize="sm">{suggestion}</Text>
+              </HStack>
+            ))}
+          </VStack>
+        </Box>
+      )}
+    </Box>
   );
 };
 
-export default Index;
+export default SearchBar;
