--- a/test/ty.html
+++ b/test/ty.html
@@ -1,188 +1,212 @@
-import { useState, useMemo, useRef, useEffect } from "react";
+import { useCallback, useMemo, useRef, useState } from "react";
+import { Box } from "@chakra-ui/react";
+import { AgGridReact } from "ag-grid-react";
 import {
-  Box,
-  Input,
-  IconButton,
-  VStack,
-  HStack,
-  Text,
-} from "@chakra-ui/react";
-import { Search, X } from "lucide-react";
+  ClientSideRowModelModule,
+  ColDef,
+  ModuleRegistry,
+  CellEditingStartedEvent,
+  CellEditingStoppedEvent,
+} from "ag-grid-community";
 import { NewsletterRow } from "@/data/newsletterData";
+import LinkRenderer from "./LinkRenderer";
+import { useToast } from "@/hooks/use-toast";
 
-interface SearchBarProps {
+ModuleRegistry.registerModules([ClientSideRowModelModule]);
+
+interface NewsletterGridProps {
   data: NewsletterRow[];
   searchTerm: string;
-  onSearchChange: (term: string) => void;
+  loading?: boolean;
 }
 
-const SearchBar = ({ data, searchTerm, onSearchChange }: SearchBarProps) => {
-  const [showSuggestions, setShowSuggestions] = useState(false);
-  const [focusedIndex, setFocusedIndex] = useState(-1);
+const NewsletterGrid = ({
+  data,
+  searchTerm,
+  loading = false,
+}: NewsletterGridProps) => {
+  const gridRef = useRef<AgGridReact>(null);
+  const [editingRowId, setEditingRowId] = useState<number | null>(null);
+  const { toast } = useToast();
 
-  const inputRef = useRef<HTMLInputElement>(null);
-  const suggestionsRef = useRef<HTMLDivElement>(null);
+  const highlightText = (text: string, search: string): string => {
+    if (!search) return text;
+    const regex = new RegExp(
+      `(${search.replace(/[.*+?^${}()|[\]\\]/g, "\\$&")})`,
+      "gi"
+    );
+    return text.replace(
+      regex,
+      '<mark class="bg-highlight text-highlight-foreground px-0.5 rounded">$1</mark>'
+    );
+  };
 
-  const suggestions = useMemo(() => {
-    if (!searchTerm || searchTerm.length < 2) return [];
+  const TextCellRenderer = useCallback(
+    (params: { value: string }) => {
+      const highlighted = highlightText(params.value || "", searchTerm);
+      return <span dangerouslySetInnerHTML={{ __html: highlighted }} />;
+    },
+    [searchTerm]
+  );
+
+  const LinkCellRenderer = useCallback(
+    (params: { value: string[] }) => (
+      <LinkRenderer links={params.value || []} />
+    ),
+    []
+  );
+
+  const columnDefs = useMemo<ColDef[]>(
+    () => [
+      {
+        headerName: "Date",
+        field: "date",
+        width: 120,
+        cellRenderer: TextCellRenderer,
+        sortable: true,
+      },
+      {
+        headerName: "Section",
+        field: "section",
+        width: 160,
+        cellRenderer: TextCellRenderer,
+        sortable: true,
+      },
+      {
+        headerName: "Strategy",
+        field: "strategy",
+        width: 130,
+        cellRenderer: TextCellRenderer,
+        sortable: true,
+      },
+      {
+        headerName: "Person/Firm",
+        field: "personFirm",
+        width: 200,
+        editable: true,
+        cellRenderer: TextCellRenderer,
+        sortable: true,
+        cellClass: "cursor-pointer",
+      },
+      {
+        headerName: "Location",
+        field: "location",
+        width: 160,
+        editable: true,
+        cellRenderer: TextCellRenderer,
+        sortable: true,
+        cellClass: "cursor-pointer",
+      },
+      {
+        headerName: "Information",
+        field: "information",
+        flex: 1,
+        minWidth: 300,
+        editable: true,
+        cellRenderer: TextCellRenderer,
+        sortable: true,
+        cellClass: "cursor-pointer",
+        wrapText: true,
+        autoHeight: true,
+      },
+      {
+        headerName: "Link",
+        field: "links",
+        width: 200,
+        cellRenderer: LinkCellRenderer,
+        sortable: false,
+      },
+    ],
+    [TextCellRenderer, LinkCellRenderer]
+  );
+
+  const defaultColDef = useMemo<ColDef>(
+    () => ({
+      resizable: true,
+      filter: false,
+    }),
+    []
+  );
+
+  const onCellEditingStarted = useCallback(
+    (event: CellEditingStartedEvent) => {
+      setEditingRowId(event.data.id);
+    },
+    []
+  );
+
+  const onCellEditingStopped = useCallback(
+    async (event: CellEditingStoppedEvent) => {
+      if (event.data.id !== editingRowId) return;
+
+      const row = event.data as NewsletterRow;
+
+      try {
+        await fetch("/api/newsletter/update", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(row),
+        });
+
+        toast({
+          title: "Row Updated",
+          description: `Successfully updated record for ${row.personFirm}`,
+        });
+      } catch {
+        toast({
+          title: "Update Failed",
+          description: "Failed to save changes. Please try again.",
+          variant: "destructive",
+        });
+      } finally {
+        setEditingRowId(null);
+      }
+    },
+    [editingRowId, toast]
+  );
+
+  const filteredData = useMemo(() => {
+    if (!searchTerm) return data;
 
     const term = searchTerm.toLowerCase();
-    const matches = new Set<string>();
-
-    data.forEach((row) => {
-      if (row.section.toLowerCase().includes(term)) matches.add(row.section);
-      if (row.strategy.toLowerCase().includes(term)) matches.add(row.strategy);
-      if (row.personFirm.toLowerCase().includes(term))
-        matches.add(row.personFirm);
-      if (row.location.toLowerCase().includes(term))
-        matches.add(row.location);
-      if (row.information.toLowerCase().includes(term)) {
-        row.information.split(" ").forEach((word) => {
-          if (word.toLowerCase().includes(term)) matches.add(word);
-        });
-      }
-    });
-
-    return Array.from(matches).slice(0, 8);
+    return data.filter(
+      (row) =>
+        row.date.toLowerCase().includes(term) ||
+        row.section.toLowerCase().includes(term) ||
+        row.strategy.toLowerCase().includes(term) ||
+        row.personFirm.toLowerCase().includes(term) ||
+        row.location.toLowerCase().includes(term) ||
+        row.information.toLowerCase().includes(term)
+    );
   }, [data, searchTerm]);
 
-  useEffect(() => {
-    const handleClickOutside = (event: MouseEvent) => {
-      if (
-        suggestionsRef.current &&
-        !suggestionsRef.current.contains(event.target as Node) &&
-        inputRef.current &&
-        !inputRef.current.contains(event.target as Node)
-      ) {
-        setShowSuggestions(false);
-      }
-    };
-
-    document.addEventListener("mousedown", handleClickOutside);
-    return () => document.removeEventListener("mousedown", handleClickOutside);
-  }, []);
-
-  const handleKeyDown = (e: React.KeyboardEvent) => {
-    if (e.key === "ArrowDown") {
-      e.preventDefault();
-      setFocusedIndex((prev) => Math.min(prev + 1, suggestions.length - 1));
-    } else if (e.key === "ArrowUp") {
-      e.preventDefault();
-      setFocusedIndex((prev) => Math.max(prev - 1, -1));
-    } else if (e.key === "Enter" && focusedIndex >= 0) {
-      e.preventDefault();
-      onSearchChange(suggestions[focusedIndex]);
-      setShowSuggestions(false);
-      setFocusedIndex(-1);
-    } else if (e.key === "Escape") {
-      setShowSuggestions(false);
-      setFocusedIndex(-1);
-    }
-  };
-
-  const clearSearch = () => {
-    onSearchChange("");
-    inputRef.current?.focus();
-  };
-
   return (
-    <Box position="relative" w="full" maxW="md">
-      {/* Input */}
-      <Box position="relative">
-        <Box
-          position="absolute"
-          left={3}
-          top="50%"
-          transform="translateY(-50%)"
-          color="fg.muted"
-        >
-          <Search size={16} />
-        </Box>
-
-        <Input
-          ref={inputRef}
-          value={searchTerm}
-          placeholder="Search newsletters..."
-          pl={10}
-          pr={10}
-          py={2.5}
-          fontSize="sm"
-          bg="bg.card"
-          borderColor="border.default"
-          borderRadius="lg"
-          _placeholder={{ color: "fg.muted" }}
-          _focus={{
-            ring: 2,
-            ringColor: "primary.default",
-            borderColor: "transparent",
-          }}
-          onChange={(e) => {
-            onSearchChange(e.target.value);
-            setShowSuggestions(true);
-            setFocusedIndex(-1);
-          }}
-          onFocus={() => setShowSuggestions(true)}
-          onKeyDown={handleKeyDown}
-        />
-
-        {searchTerm && (
-          <IconButton
-            aria-label="Clear search"
-            size="xs"
-            variant="ghost"
-            position="absolute"
-            right={2}
-            top="50%"
-            transform="translateY(-50%)"
-            onClick={clearSearch}
-          >
-            <X size={16} />
-          </IconButton>
-        )}
-      </Box>
-
-      {/* Suggestions */}
-      {showSuggestions && suggestions.length > 0 && (
-        <Box
-          ref={suggestionsRef}
-          position="absolute"
-          top="full"
-          left={0}
-          right={0}
-          mt={1}
-          bg="bg.popover"
-          border="1px solid"
-          borderColor="border.default"
-          borderRadius="lg"
-          shadow="lg"
-          zIndex={50}
-          overflow="hidden"
-        >
-          <VStack spacing={0} align="stretch">
-            {suggestions.map((suggestion, index) => (
-              <HStack
-                key={suggestion}
-                px={4}
-                py={2.5}
-                spacing={2}
-                cursor="pointer"
-                bg={index === focusedIndex ? "bg.muted" : "transparent"}
-                _hover={{ bg: "bg.muted" }}
-                onClick={() => {
-                  onSearchChange(suggestion);
-                  setShowSuggestions(false);
-                  setFocusedIndex(-1);
-                }}
-              >
-                <Search size={14} color="var(--chakra-colors-fg-muted)" />
-                <Text fontSize="sm">{suggestion}</Text>
-              </HStack>
-            ))}
-          </VStack>
-        </Box>
-      )}
+    <Box
+      className="ag-theme-quartz"
+      w="full"
+      h="calc(100vh - 200px)"
+      border="1px solid"
+      borderColor="border.default"
+      borderRadius="lg"
+      overflow="hidden"
+      shadow="sm"
+      opacity={loading ? 0.6 : 1}
+      pointerEvents={loading ? "none" : "auto"}
+    >
+      <AgGridReact
+        ref={gridRef}
+        rowData={filteredData}
+        columnDefs={columnDefs}
+        defaultColDef={defaultColDef}
+        animateRows
+        rowSelection="single"
+        stopEditingWhenCellsLoseFocus
+        onCellEditingStarted={onCellEditingStarted}
+        onCellEditingStopped={onCellEditingStopped}
+        getRowId={(params) => params.data.id.toString()}
+      />
     </Box>
   );
 };
 
-export default SearchBar;
+export default NewsletterGrid;
