--- a/test/asd.html
+++ b/test/asd.html
@@ -1,320 +1,4 @@
-import { fetchNewsletterData, NewsletterRow } from "@/data/NewsletterData";
-import NewsletterPortalTable from "./NewsletterPortalTable";
-import { Box, HStack, Text } from "@chakra-ui/react";
-import { Colors, useColorMode } from "@loim/loim-ui";
-import { useEffect, useState, useCallback } from "react";
-import SearchBar from "@/components/SearchBar";
-
-export const NewsletterPortalPage = () => {
-  const { colorMode } = useColorMode();
-  const borderColor =
-    colorMode === "dark" ? Colors.gray[800].value : Colors.gray[100].value;
-
-  const [searchTerm, setSearchTerm] = useState("");
-  const [newsletterData, setNewsletterData] = useState<NewsletterRow[]>([]);
-  const [loading, setLoading] = useState(true);
-
-  // ✅ SINGLE source of truth for refresh
-  const refreshNewsletterData = useCallback(async () => {
-    setLoading(true);
-    try {
-      const data = await fetchNewsletterData();
-      setNewsletterData(data);
-    } finally {
-      setLoading(false);
-    }
-  }, []);
-
-  useEffect(() => {
-    refreshNewsletterData();
-  }, [refreshNewsletterData]);
-
-  return (
-    <>
-      <Box
-        bg={
-          colorMode === "dark"
-            ? Colors.gray[900].value
-            : Colors.gray[100].value
-        }
-        borderBottom={`1px solid ${borderColor}`}
-        padding="2.5rem 1.5rem"
-        display="flex"
-        alignItems="center"
-      >
-        <SearchBar
-          data={newsletterData}
-          searchTerm={searchTerm}
-          onSearchChange={setSearchTerm}
-        />
-
-        <Box mb={4} px={4} py={2.5} borderRadius="lg" fontSize="xs">
-          <HStack mt="10px">
-            <HStack>
-              <Text fontWeight="medium">Tip:</Text>
-              <Text>
-                Double-click on Person/Firm, Location, or Information cells to
-                edit
-              </Text>
-            </HStack>
-
-            <Text>|</Text>
-            <Text>Press Enter to save changes</Text>
-            <Text>|</Text>
-            <Text>Click PDF links to download</Text>
-          </HStack>
-        </Box>
-      </Box>
-
-      <NewsletterPortalTable
-        data={newsletterData}
-        searchTerm={searchTerm}
-        loading={loading}
-        onRefresh={refreshNewsletterData}
-      />
-    </>
-  );
-};
-
-
-
-
-
-
-
-
-
-
-
-        import { useCallback, useMemo, useRef, useState } from "react";
-import React from "react";
-import { AgGridReact } from "ag-grid-react";
-import "ag-grid-enterprise";
-import {
-  ColDef,
-  CellEditingStartedEvent,
-  CellEditingStoppedEvent,
-} from "ag-grid-community";
-import { NewsletterRow } from "@/data/NewsletterData";
-import { useAgGridTheme } from "@loim/loim-ui";
-
-interface NewsletterGridProps {
-  data: NewsletterRow[];
-  searchTerm: string;
-  loading?: boolean;
-  onRefresh: () => Promise<void>;
-}
-
-const NewsletterPortalTable = ({
-  data,
-  searchTerm,
-  loading = false,
-  onRefresh,
-}: NewsletterGridProps) => {
-  const gridRef = useRef<AgGridReact>(null);
-  const [editingRowId, setEditingRowId] = useState<number | null>(null);
-  const { agGridTheme } = useAgGridTheme();
-
-  const highlightText = (text: string, search: string): string => {
-    if (!search) return text;
-    const regex = new RegExp(
-      `(${search.replace(/[.*+?^${}()|[\]\\]/g, "\\$&")})`,
-      "gi"
-    );
-    return text.replace(
-      regex,
-      '<mark class="bg-highlight text-highlight-foreground px-0.5 rounded">$1</mark>'
-    );
-  };
-
-  const TextCellRenderer = useCallback(
-    (params: { value: string }) => {
-      const highlighted = highlightText(params.value || "", searchTerm);
-      return <span dangerouslySetInnerHTML={{ __html: highlighted }} />;
-    },
-    [searchTerm]
-  );
-
-  const DownloadCellRenderer = (params: any) => {
-    const downloadURL =
-      "http://nycuapp01.biz.lodh.com:8011/newsletterportal/api/downloadFiles";
-
-    const link = params.value?.replaceAll("\\", "%5C") ?? "";
-    const fileLocationArr = link
-      .split(";")
-      .map((s: string) => s.trim())
-      .filter(Boolean);
-
-    return React.createElement(
-      "div",
-      {
-        style: {
-          display: "flex",
-          flexDirection: "column",
-          alignItems: "center",
-          rowGap: "4px",
-          height: "100%",
-        },
-      },
-      fileLocationArr.map((url: string, index: number) => {
-        const fileName = url.split("%5C").pop() || url;
-        return React.createElement(
-          "a",
-          {
-            key: index,
-            href: downloadURL + url,
-            target: "_blank",
-            rel: "noopener noreferrer",
-            style: { color: "#3182CE", textDecoration: "none" },
-          },
-          fileName
-        );
-      })
-    );
-  };
-
-  const columnDefs = useMemo<ColDef[]>(
-    () => [
-      {
-        headerName: "Date",
-        field: "asOfDate",
-        filter: "agTextColumnFilter",
-        cellRenderer: TextCellRenderer,
-        floatingFilter: true,
-        sortable: true,
-        resizable: true,
-      },
-      {
-        headerName: "Section",
-        field: "section",
-        cellRenderer: TextCellRenderer,
-        filter: "agTextColumnFilter",
-        floatingFilter: true,
-        sortable: true,
-        autoHeight: true,
-        wrapText: true,
-      },
-      {
-        headerName: "Strategy",
-        field: "strategy",
-        cellRenderer: TextCellRenderer,
-        filter: "agTextColumnFilter",
-        floatingFilter: true,
-        sortable: true,
-        autoHeight: true,
-        wrapText: true,
-      },
-      {
-        headerName: "Person/Firm",
-        field: "personFirm",
-        editable: true,
-        cellRenderer: TextCellRenderer,
-        filter: "agTextColumnFilter",
-        floatingFilter: true,
-        sortable: true,
-        autoHeight: true,
-        wrapText: true,
-      },
-      {
-        headerName: "Location",
-        field: "countryRegion",
-        editable: true,
-        cellRenderer: TextCellRenderer,
-        filter: "agTextColumnFilter",
-        floatingFilter: true,
-        sortable: true,
-        autoHeight: true,
-        wrapText: true,
-      },
-      {
-        headerName: "Information",
-        field: "description",
-        editable: true,
-        cellRenderer: TextCellRenderer,
-        filter: "agTextColumnFilter",
-        floatingFilter: true,
-        sortable: true,
-        autoHeight: true,
-        wrapText: true,
-      },
-      {
-        headerName: "Link",
-        field: "fileLocation",
-        cellRenderer: DownloadCellRenderer,
-        filter: "agTextColumnFilter",
-        floatingFilter: true,
-        autoHeight: true,
-        wrapText: true,
-      },
-    ],
-    [TextCellRenderer]
-  );
-
-  const onCellEditingStarted = useCallback(
-    (event: CellEditingStartedEvent) => {
-      setEditingRowId(event.data.id);
-    },
-    []
-  );
-
-  const onCellEditingStopped = useCallback(
-    async (event: CellEditingStoppedEvent) => {
-      if (event.data.id !== editingRowId) return;
-
-      try {
-        await fetch(
-          "http://nycuapp01.biz.lodh.com:8011/newsletterportal/api/crud/newsletter",
-          {
-            method: "POST",
-            credentials: "include",
-            headers: {
-              "Content-Type": "application/json; charset=utf-8",
-            },
-            body: JSON.stringify([event.data]),
-          }
-        );
-
-        // ✅ THIS triggers grid reload
-        await onRefresh();
-      } catch {
-        console.error("Error updating record");
-      } finally {
-        setEditingRowId(null);
-      }
-    },
-    [editingRowId, onRefresh]
-  );
-
-  const filteredData = useMemo(() => {
-    if (!searchTerm) return data;
-    const term = searchTerm.toLowerCase();
-    return data.filter(
-      (row) =>
-        row.asOfDate?.toLowerCase().includes(term) ||
-        row.section?.toLowerCase().includes(term) ||
-        row.strategy?.toLowerCase().includes(term) ||
-        row.personFirm?.toLowerCase().includes(term) ||
-        row.countryRegion?.toLowerCase().includes(term) ||
-        row.description?.toLowerCase().includes(term)
-    );
-  }, [data, searchTerm]);
-
-  return (
-    <div style={{ height: "71vh" }}>
-      <AgGridReact
-        ref={gridRef}
-        rowData={filteredData}
-        columnDefs={columnDefs}
-        theme={agGridTheme}
-        loading={loading}
-        animateRows
-        stopEditingWhenCellsLoseFocus
-        onCellEditingStarted={onCellEditingStarted}
-        onCellEditingStopped={onCellEditingStopped}
-        getRowId={(params) => params.data.id.toString()}
-      />
-    </div>
-  );
-};
-
-export default NewsletterPortalTable;
+valueFormatter: (params) => {
+    if (!params.value) return "";
+    return params.value.split("T")[0]; // ✅ yyyy-mm-dd
+  },
